src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Academy_Type__c</fullName>
        <label>Academy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Convertor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Code_S__c</fullName>
        <label>Account Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <externalId>true</externalId>
        <label>Account Code (Old)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreed_D2D_Charge_Rate__c</fullName>
        <label>Standard Day Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Client Alert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alliances_K_Z__c</fullName>
        <label>Alliances K-Z</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kaizen Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>KCSP Teaching Alliance</fullName>
                </value>
                <value>
                    <fullName>Kent Coastal Teaching School</fullName>
                </value>
                <value>
                    <fullName>Kernow Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>King Alfred’s Academy OTSA Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>King Edward VI High School For Girls</fullName>
                </value>
                <value>
                    <fullName>Kingsland Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Kingston Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Knowsley Central Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Knowsley First Alliance</fullName>
                </value>
                <value>
                    <fullName>KYRA Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>L.E.A.D. Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Ladywood Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Lambeth Teaching Schools Alliance North</fullName>
                </value>
                <value>
                    <fullName>Lambeth Teaching Schools Alliance South</fullName>
                </value>
                <value>
                    <fullName>Landau Forte Teaching School</fullName>
                </value>
                <value>
                    <fullName>Leading Learning Forward Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>LEARN - A Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Learners First</fullName>
                </value>
                <value>
                    <fullName>Learning for All Alliance</fullName>
                </value>
                <value>
                    <fullName>Learning Unlimited Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Lee Chapel Academy Trust</fullName>
                </value>
                <value>
                    <fullName>LeTS</fullName>
                </value>
                <value>
                    <fullName>Lightwoods Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Lindens Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Linwood Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>London City Alliance</fullName>
                </value>
                <value>
                    <fullName>London Early Years Education Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>London East Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>London West Alliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliances__c</fullName>
        <label>Alliances A-J</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>&apos;Partners in Learning&apos;. Doncaster Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>5 Wells Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>A+ &amp; MCSP Alliance</fullName>
                </value>
                <value>
                    <fullName>ACE Centre Nursery School and Childrens Centre OTSA Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Advanced Learning Alliance</fullName>
                </value>
                <value>
                    <fullName>Affinity Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Alban Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Alliance for Learning</fullName>
                </value>
                <value>
                    <fullName>All Saints TSA</fullName>
                </value>
                <value>
                    <fullName>Altius Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Ambergate Sports College</fullName>
                </value>
                <value>
                    <fullName>Ambitious Teaching School</fullName>
                </value>
                <value>
                    <fullName>Anglian Gateway Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Anton Andover Alliance</fullName>
                </value>
                <value>
                    <fullName>Applied Minds Teaching School</fullName>
                </value>
                <value>
                    <fullName>Ash Field Teaching Academy Alliance</fullName>
                </value>
                <value>
                    <fullName>Ashford Teaching Alliance (ATA)</fullName>
                </value>
                <value>
                    <fullName>Ash Grove Teaching Alliance</fullName>
                </value>
                <value>
                    <fullName>Ashley Down Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Ashton on Mersey</fullName>
                </value>
                <value>
                    <fullName>Aspire</fullName>
                </value>
                <value>
                    <fullName>Astra Learning Alliance</fullName>
                </value>
                <value>
                    <fullName>Atticus Teaching Alliance</fullName>
                </value>
                <value>
                    <fullName>Avon TSA</fullName>
                </value>
                <value>
                    <fullName>Balcarras Teaching School Partnership</fullName>
                </value>
                <value>
                    <fullName>Barnsley Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Barr Beacon Teaching School Alliance</fullName>
                </value>
                <value>
                    <fullName>Bartley Green School Alliance</fullName>
                </value>
                <value>
                    <fullName>BCLLA Alliance</fullName>
                </value>
                <value>
                    <fullName>Beacon Teaching Alliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Class_Size__c</fullName>
        <label>Average Class Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Geolocation__c</fullName>
        <label>Billing Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Breaks__c</fullName>
        <label>Breaks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brighton_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brighton Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Amount__c</fullName>
        <label>Bundle Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if this client has purchased Bundle</description>
        <label>Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundles__c</fullName>
        <label>Bundles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Account_Number__c</fullName>
        <formula>Account_Code_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Add1__c</fullName>
        <description>Merit Export Field</description>
        <formula>ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Add1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Add2__c</fullName>
        <description>Merit Export field.</description>
        <formula>ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Add2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Add3__c</fullName>
        <description>Merit Export field.</description>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Add3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <formula>IF (text(Status__c)=&quot;Prospect&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4e&quot;, &quot;&quot;),
IF (text(Status__c)=&quot;Client&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4Z&quot;, &quot;&quot;),
IF (text(Status__c)=&quot;Lapsed&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4U&quot;, &quot;&quot;),
IF (text(Status__c)=&quot;Closed&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4P&quot;, &quot;&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4e&quot;, &quot;&quot;) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Reg_Numberc__c</fullName>
        <label>Company Reg Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <label>Credit Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D2D_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D2D Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Day-to-Day Contact)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DFE_Data__c</fullName>
        <defaultValue>&quot;https://www.gov.uk/government/publications&quot;</defaultValue>
        <label>DFE Data</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dan_Kerry_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this school a client of Dan Kerry?</description>
        <label>Dan Kerry Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Credit__c</fullName>
        <label>Days Credit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dfe_link__c</fullName>
        <label>Dfe Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>District_Council__c</fullName>
        <label>District Council (Kent Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>District_Council</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dress_Code__c</fullName>
        <label>Dress Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finish_Time__c</fullName>
        <label>Finish Time</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Term_End__c</fullName>
        <label>First Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Term_Start__c</fullName>
        <label>First Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HES_opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HES opt-in?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Notes_For_Confirmation_Letter__c</fullName>
        <defaultValue>&quot;None Advised&quot;</defaultValue>
        <label>HS Notes For Confirmation Letter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Issues__c</fullName>
        <label>Health &amp; Safety Issues (Old)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advised</fullName>
                </value>
                <value>
                    <fullName>Non Advised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety_Notes__c</fullName>
        <label>Health &amp; Safety Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health &amp; Safety Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hirer_AWR_Mandatory__c</fullName>
        <label>Hirer(AWR) Mandatory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Maintained_Schools</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hirer_Academy_Search__c</fullName>
        <defaultValue>&quot;https://www.gov.uk/government/publications/open-academies-and-academy-projects-in-development&quot;</defaultValue>
        <label>Hirer: Academy Search</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hirer_Independent_Free_School_Search__c</fullName>
        <defaultValue>&quot;https://get-information-schools.service.gov.uk/?SelectedTab=Establishments&quot;</defaultValue>
        <label>Hirer: Independent/ Free School Search</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hirer__c</fullName>
        <inlineHelpText>a) For maintained schools: the school name
b) For independent schools:  proprietor of the school
c) For academies and free schools: the proprietor/ trust</inlineHelpText>
        <label>Hirer</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                    <default>true</default>
                    <label>Consolidated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LA_Borough__c</fullName>
        <label>LA/Borough</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LEA_Borough</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEA_Region__c</fullName>
        <label>Sub-LEA (old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anglesey</fullName>
                </value>
                <value>
                    <fullName>Babergh</fullName>
                </value>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Barnsley</fullName>
                </value>
                <value>
                    <fullName>Barrow-in-Furness</fullName>
                </value>
                <value>
                    <fullName>Basildon</fullName>
                </value>
                <value>
                    <fullName>Basingstoke and Deane</fullName>
                </value>
                <value>
                    <fullName>Bassetlaw</fullName>
                </value>
                <value>
                    <fullName>Bath and North East Somerset</fullName>
                </value>
                <value>
                    <fullName>Bedford</fullName>
                </value>
                <value>
                    <fullName>Belfast</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blaby</fullName>
                </value>
                <value>
                    <fullName>Blackburn with Darwen</fullName>
                </value>
                <value>
                    <fullName>Blackpool</fullName>
                </value>
                <value>
                    <fullName>Blaenau Gwent</fullName>
                </value>
                <value>
                    <fullName>Bolsover</fullName>
                </value>
                <value>
                    <fullName>Bolton</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Bournemouth</fullName>
                </value>
                <value>
                    <fullName>Bracknell Forest</fullName>
                </value>
                <value>
                    <fullName>Bradford East</fullName>
                </value>
                <value>
                    <fullName>Bradford North</fullName>
                </value>
                <value>
                    <fullName>Bradford West</fullName>
                </value>
                <value>
                    <fullName>Braintree</fullName>
                </value>
                <value>
                    <fullName>Breckland</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Brentwood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>Yorkshire &amp; Humberside</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>West Midlands</fullName>
                </value>
                <value>
                    <fullName>East Midlands</fullName>
                </value>
                <value>
                    <fullName>Eastern England</fullName>
                </value>
                <value>
                    <fullName>Greater London</fullName>
                </value>
                <value>
                    <fullName>South East England</fullName>
                </value>
                <value>
                    <fullName>South West England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>N Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Closing_Report_Created_Date__c</fullName>
        <label>Last Closing Report Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Timesheet_Created_Date__c</fullName>
        <label>Last Timesheet Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>London_Borough__c</fullName>
        <label>London Borough</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LEA__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barking</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Chelsea</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Dagenham</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Fulham</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington</fullName>
                </value>
                <value>
                    <fullName>Kingston upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Merton</fullName>
                </value>
                <value>
                    <fullName>Newham</fullName>
                </value>
                <value>
                    <fullName>Redbridge</fullName>
                </value>
                <value>
                    <fullName>Richmond upon Thames</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunchtime__c</fullName>
        <label>Lunchtime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Telephone__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nearest_Train_Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest Train Station</label>
        <referenceTo>Train_Station__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes - OLD</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ofsted_Report__c</fullName>
        <defaultValue>&quot;https://reports.ofsted.gov.uk&quot;</defaultValue>
        <label>Ofsted Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Outstanding_Pipeline__c</fullName>
        <description>Calculation of the potential revenue from open vacancies</description>
        <label>Outstanding Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Pardot__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner (Pardot)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Frequency__c</fullName>
        <label>Pay Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Method__c</fullName>
        <label>Pay Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BACS</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>